<resources>
    <string name="app_name">CoursesSystem</string>
    <string name="sno">学号</string>
    <string name="name">姓名</string>
    <string name="course_system">选课系统</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="manager">管理员</string>
    <string name="login">登录</string>
    <string name="course_name">课程名字:</string>
    <string name="teacher_name">教师:</string>
    <string name="score">分数:</string>
    <string name="telephone">电话:</string>
    <string name="school">单位:</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="tno">编号</string>
    <string name="cno">编号</string>
    <string name="commit">提交</string>
</resources>
