<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    tools:context="piratehat.coursessystem.ui.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:textColorHint="@color/colorWhite"
        app:counterOverflowTextAppearance="@style/TextOverCount">

        <EditText
            android:id="@+id/et_no"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/cno"
            android:inputType="number"
            android:textColor="@color/colorWhite" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:textColorHint="@color/colorWhite"
        app:counterOverflowTextAppearance="@style/TextOverCount">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/colorWhite" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:textColorHint="@color/colorWhite"
        app:counterOverflowTextAppearance="@style/TextOverCount">

        <EditText
            android:id="@+id/et_school"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/school"
            android:inputType="text"
            android:textColor="@color/colorWhite" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
