<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"

                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="人工智能"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:text="@string/teacher_name"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"

                android:id="@+id/tv_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_name"
                android:text="咋韩"
                android:textColor="@color/colorBlack" />


            <TextView
                android:textSize="18sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_teacher"
                android:text="@string/telephone"
                android:textColor="@color/colorBlack" />


            <TextView
                android:textSize="18sp"

                android:id="@+id/tv_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_teacher"
                android:text="1221212121"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tel"
                android:text="@string/school"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"

                android:id="@+id/tv_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_tel"
                android:text="的的"
                android:textColor="@color/colorBlack" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>